Mon Mar 31 17:40:48 1997  Barry Jaspan  <bjaspan@mit.edu>

	* client_principal.c, client_rpc.c: add support for
 	setkey_principal

Sat Feb 22 01:35:19 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in (SHLIB_EXPDEPS): s/.so/$(SHLIBEXT)

Wed Jan 15 20:49:34 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Wed Nov 13 19:20:11 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (clean-unix): Remove shared/*.

Wed Nov  6 10:35:01 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* client_init.c (_kadm5_init_any): Use a more fined grained error
 		code, KADM5_MISSING_CONF_PARAMS instead of
 		KRB5_CONFIG_BADFORMAT
	(_kadm5_init_any): Use a more fined grained error code,
 	 	KADM5_BAD_SERVER_NAME, instead of KRB5_CONFIG_BADFORMAT.

Thu Nov  7 11:41:08 1996  Ezra Peisach  <epeisach@mit.edu>

	* client_principal.c (kadm5_get_principal,
		kadm5_modify_principal): For a V1 request, copy only the
		memory that is allocated for the incomming principal.
		
Fri Oct  4 08:38:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* client_principal.c (kadm5_randkey_principal): Do not assume that
		malloc(0) returns non-NULL. [krb5-admin/29]

Mon Aug 26 16:33:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* client_init.c (_kadm5_init_any): use DEFAULT_PROFILE_PATH
 	instead of "/etc/krb5.conf"

Wed Jul 31 17:01:38 1996  Tom Yu  <tlyu@mit.edu>

	* client_init.c: Revert prior change due to netdb.h shuffling.

Tue Jul 30 19:47:53 1996  Tom Yu  <tlyu@mit.edu>

	* client_init.c: Remove #include <netdb.h> because rpc/types.h
		(included from kadm5/admin.h) gets it.

Wed Jul 24 20:59:35 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Don't replace setenv

	* client_init.c (_kadm5_init_any): Use krb5_setenv and krb5_unsetenv

Wed Jul 24 18:20:47 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in, configure.in: break out client lib into a
		subdirectory
